[package]
name = "visolearn"
version = "0.1.0"
edition = "2021"
authors = ["Your Name <your.email@example.com>"]
description = "Educational AI image generation and evaluation"
license = "MIT"
readme = "README.md"

[dependencies]
# Core functionality
tokio = { version = "1.28", features = ["full"] } # Async runtime
config = "0.13" # Configuration management
serde = { version = "1.0", features = ["derive"] } # Serialization/deserialization
serde_json = "1.0" # JSON support

# UI and web
dioxus = "0.4" # UI framework (or consider egui, iced, etc.)
# Alternative: leptos = "0.5" # Web framework

# Image processing
image = "0.24" # Image processing

# AI and ML
burn = "0.8" # Rust ML framework
tch = "0.13" # PyTorch bindings for Rust

# Utilities
log = "0.4" # Logging
env_logger = "0.10" # Environment-based logger
dotenv = "0.15" # .env file handling
thiserror = "1.0" # Error handling

[dev-dependencies]
criterion = "0.5" # Benchmarking
mockall = "0.11" # Mocking for tests

[[bench]]
name = "image_generation"
harness = false